--- a/tv-local-backend/package.json
+++ b/tv-local-backend/package.json
@@ -10,13 +10,15 @@
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.23",
-    "@strapi/plugin-users-permissions": "4.25.23",
-    "@strapi/plugin-i18n": "4.25.23",
     "@strapi/plugin-cloud": "4.25.23",
+    "@strapi/plugin-email": "^4.25.23",
+    "@strapi/plugin-i18n": "4.25.23",
+    "@strapi/plugin-users-permissions": "4.25.23",
+    "@strapi/provider-email-nodemailer": "^4.25.23",
+    "@strapi/strapi": "4.25.23",
     "better-sqlite3": "8.6.0",
+    "nodemailer": "^7.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
